--- a/pom.xml
+++ b/pom.xml
@@ -9,10 +9,10 @@
 		<relativePath/>
 	</parent>
 	<groupId>com.albpintado</groupId>
-	<artifactId>java8-spring-boot-2.7.6-template</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
-	<name>java8-spring-boot-2.7.6-template</name>
-	<description>Template for a Spring Boot 2.7.6 project with Java 8</description>
+	<artifactId>crm-era</artifactId>
+	<version>0.1.0-SNAPSHOT</version>
+	<name>crm-era</name>
+	<description>API built for CRM-Era project</description>
 	<properties>
 		<java.version>1.8</java.version>
 	</properties>
