--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,6 +1,6 @@
 spring.config.import=env.properties
 
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:${DB_DATABASE_DEV}
 spring.datasource.username=${DB_USER_DEV}
 spring.datasource.password=${DB_PASSWORD_DEV}
